--- a/plugins/vfs-connections/ui/src/main/javascript/app/components/intro/intro.html
+++ b/plugins/vfs-connections/ui/src/main/javascript/app/components/intro/intro.html
@@ -7,7 +7,9 @@
     </div>
     <div class="margin_bottom_15">
       <label for="connectionType" class="margin_bottom_5 block text_left">{{::vm.connectionType}}</label>
-      <input id="connectionType" class="block" type="text" size="50" />
+      <select class="margin_bottom_5 block text_left">
+        <option>Google Cloud Storage</option>
+      </select>
     </div>
   </div>
   <div class="bottom">
