--- a/plugins/vfs-connections/ui/src/main/javascript/app/components/final/final.html
+++ b/plugins/vfs-connections/ui/src/main/javascript/app/components/final/final.html
@@ -1,7 +1,28 @@
-<div class="main_div">
-  <div class="title_text margin_bottom_30">{{::vm.connectionSummary}}</div>
-  <div class="middle_div margin_bottom_10">
-
+<div class="main_div" style="padding-top:40px;">
+  <div style="margin-bottom: 22px;">
+    <div class="success"></div>
+  </div>
+  <div class="title_text margin_bottom_30">
+    {{::vm.congratulationsLabel}}
+  </div>
+  <div class="primary_text">
+    <div class="margin_bottom_80" ng-if="vm.connection.edit">{{::vm.readyEdit}}</div>
+    <div class="margin_bottom_80" ng-if="!vm.connection.edit">{{::vm.readyCreate}}</div>
+    <div class="margin_bottom_30">{{::vm.question}}</div>
+    <div class="margin_bottom_30" ng-if="!vm.connection.connected">
+      <button class="same_width primary" type="button" ng-click="vm.onCreateNew()">
+        <span>
+          {{::vm.createNewConnection}}
+        </span>
+      </button>
+    </div>
+    <div>
+      <button class="same_width primary" type="button" ng-click="vm.onEditConnection()">
+        <span>
+          {{::vm.editConnection}}
+        </span>
+      </button>
+    </div>
   </div>
   <div class="bottom">
     <div class="margin_bottom_20">
@@ -9,10 +30,10 @@
     </div>
     <div>
       <help></help>
-      <button id="next" class="right margin_left_10 primary" type="button" ng-click="vm.next()">
-      <span>
-        {{::vm.nextLabel}}
-      </span>
+      <button class="right primary" type="button" ng-click="vm.onClose()">
+        <span>
+          {{::vm.closeLabel}}
+        </span>
       </button>
     </div>
   </div>
