--- a/plugins/connections/ui/src/main/javascript/app/components/summary/summary.html
+++ b/plugins/connections/ui/src/main/javascript/app/components/summary/summary.html
@@ -2,11 +2,14 @@
   <div class="title_text margin_bottom_30 text_center">{{::vm.connectionSummary}}</div>
   <div class="middle_div margin_bottom_10">
     <div class="margin_bottom_15">
-      <label for="connectionName" class="margin_bottom_5 block text_left">{{::vm.generalSettings}}</label>
+      <div class="section_header">
+        <label class="margin_bottom_5 block text_left">{{::vm.generalSettings}}</label>
+        <div class="edit" ng-click="vm.onEditClick('intro')"></div>
+      </div>
       <div class="group_holder">
         <div class="group">
           <div class="label">Connection name</div>
-          <div class="value">{{vm.data.name}}</div>
+          <div class="value">{{vm.data.model.name}}</div>
         </div>
         <div class="group">
           <div class="label">Connection type</div>
@@ -15,11 +18,25 @@
       </div>
     </div>
     <div class="margin_bottom_15">
-      <label for="connectionName" class="margin_bottom_5 block text_left">{{::vm.connectionDetails}}</label>
+      <div class="section_header">
+        <label class="margin_bottom_5 block text_left">{{::vm.connectionDetails}}</label>
+        <div class="edit" ng-click="vm.onEditClick(vm.data.model.type + 'step1')"></div>
+      </div>
       <div class="group_holder">
         <div class="group" ng-repeat="(key, value) in vm.data.mapping">
           <div class="label">{{vm.data.mapping[key]}}</div>
-          <div class="value">{{vm.data.model[key]}}</div>
+          <div class="value" title="{{vm.data.model[key]}}">{{vm.data.model[key]}}</div>
+        </div>
+      </div>
+    </div>
+    <div class="margin_bottom_15">
+      <div class="section_header">
+        <label class="margin_bottom_5 block text_left">{{::vm.description}}</label>
+        <div class="edit" ng-click="vm.onEditClick('intro')"></div>
+      </div>
+      <div class="group_holder">
+        <div class="group">
+          <div class="label">{{vm.data.model.description}}</div>
         </div>
       </div>
     </div>
