--- a/plugins/connections/ui/src/main/javascript/app/plugins/other/components/step1/step1.html
+++ b/plugins/connections/ui/src/main/javascript/app/plugins/other/components/step1/step1.html
@@ -2,6 +2,10 @@
   <div class="title_text margin_bottom_30 text_center">{{::vm.connectionDetails}}</div>
   <div class="middle_div margin_bottom_10">
     <div class="margin_bottom_15">
+      <label for="host" class="margin_bottom_5 block text_left">{{::vm.protocol}}</label>
+      <input focus="300" id="protocol" class="block" type="text" size="50" ng-model="vm.data.model.protocol"/>
+    </div>
+    <div class="margin_bottom_15">
       <label for="host" class="margin_bottom_5 block text_left">{{::vm.host}}</label>
       <input focus="300" id="host" class="block" type="text" size="50" ng-model="vm.data.model.host"/>
     </div>
