--- a/plugins/connections/ui/src/main/resources/app/css/index.css
+++ b/plugins/connections/ui/src/main/resources/app/css/index.css
@@ -209,7 +209,7 @@ button.invisible {
 
 #btnHelp {
   cursor: pointer;
-  background-image: url("../../img/help.svg");
+  background-image: url("../img/help.svg");
   background-repeat: no-repeat;
   background-position: left center;
   position: relative;
@@ -248,10 +248,6 @@ textarea {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-}
-
-textarea {
-  width: 366px;
 }
 
 input[type="text"]:focus,
