--- a/plugins/file-open-save-new/core/src/main/javascript/app/components/files/files.css
+++ b/plugins/file-open-save-new/core/src/main/javascript/app/components/files/files.css
@@ -120,6 +120,13 @@ files tbody tr.selected .fileType {
   background-color: #005DA6;
   color: #FFFFFF;
 }
+/** debug **/
+files tbody tr.non-selectable td,
+files tbody tr.non-selectable:hover td,
+files tbody tr.non-selectable .fileModified,
+files tbody tr.non-selectable .fileType {
+  color: #B2B2B2;
+}
 
 files tbody tr.selected.highlighted td,
 files tbody tr.selected.highlighted:hover td,
