--- a/plugins/file-open-save-new/core/src/main/javascript/app/components/files/files.html
+++ b/plugins/file-open-save-new/core/src/main/javascript/app/components/files/files.html
@@ -41,12 +41,12 @@
   <div key ng-hide="vm.loading" id="bodyWrapper" class="bodyWrapper" context="filesFolderContext" ng-right-click="vm.onRightClick($event, null)">
     <table id="filesTableBody" ng-class="{'additional': vm.showAdditional}" ng-body-click="vm.onBodyClick(e, id)">
       <tbody>
-      <tr ng-repeat="file in vm.files | filter: vm.fileFilter | orderBy: file: vm.sortReverse: vm.compareFiles "
+      <tr ng-repeat="file in vm.files | orderBy: file: vm.sortReverse: vm.compareFiles "
           ng-if="!file.hidden"
-          ng-click="vm.onClick($event, file)"
-          ng-right-click="vm.onRightClick($event, file)"
-          ng-dblclick="vm.commitFile($event, file)"
-          ng-class="{selected: vm.isSelected(file), highlighted: vm.isHighlighted(file)}"
+          ng-click="vm.fileFilter(file) ? vm.onClick($event, file) : false"
+          ng-right-click="vm.fileFilter(file) ? vm.onRightClick($event, file) : false"
+          ng-dblclick="vm.fileFilter(file) ? vm.commitFile($event, file) : false"
+          ng-class="{selected: vm.isSelected(file), 'non-selectable': !vm.fileFilter(file), highlighted: vm.isHighlighted(file)}"
           title="{{file.name}}&#013;{{file.path}}"
           drop
           on-drop="vm.onDrop(from, to)"
